--- a/proyekPBO/src/main/FormPendaftar.form
+++ b/proyekPBO/src/main/FormPendaftar.form
@@ -211,9 +211,9 @@
           <Properties>
             <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
               <StringArray count="3">
-                <StringItem index="0" value="Laki-Laki"/>
-                <StringItem index="1" value="Perempuan"/>
-                <StringItem index="2" value=" "/>
+                <StringItem index="0" value="-"/>
+                <StringItem index="1" value="Laki-Laki"/>
+                <StringItem index="2" value="Perempuan"/>
               </StringArray>
             </Property>
           </Properties>
@@ -224,11 +224,12 @@
         <Component class="javax.swing.JComboBox" name="tingkatComboBox">
           <Properties>
             <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
-              <StringArray count="4">
-                <StringItem index="0" value="1"/>
-                <StringItem index="1" value="2"/>
-                <StringItem index="2" value="3"/>
-                <StringItem index="3" value="4"/>
+              <StringArray count="5">
+                <StringItem index="0" value="-"/>
+                <StringItem index="1" value="1"/>
+                <StringItem index="2" value="2"/>
+                <StringItem index="3" value="3"/>
+                <StringItem index="4" value="4"/>
               </StringArray>
             </Property>
           </Properties>
