--- a/proyekPBO/src/main/Dashboard.form
+++ b/proyekPBO/src/main/Dashboard.form
@@ -126,6 +126,9 @@
               <Image iconType="2" name="D:\Documents\Java\proyekPBO\proyekPBO\src\assets\loginadmin.png"/>
             </Property>
             <Property name="text" type="java.lang.String" value="Login Admin"/>
+            <Property name="cursor" type="java.awt.Cursor" editor="org.netbeans.modules.form.editors2.CursorEditor">
+              <Color id="Hand Cursor"/>
+            </Property>
           </Properties>
           <Events>
             <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="loginadmButtonActionPerformed"/>
